--- a/styles.css
+++ b/styles.css
@@ -1,36 +1,126 @@
+h1 {
+    color: black;
+    font-family: 'Fira Sans';
+    font-weight: 600;
+    font-size: 150%;
+    padding-top: 190px;
+    padding-bottom: 20px;
+}
+
+p {
+    font-family: 'Fira Sans';
+    color: #88898B;
+    font-weight: 300;
+}
+
+main {
+    color: #88898B;
+    font-family: 'Fira Sans';
+    font-weight: 300;
+    width: 90%   
+}
+ul {
+    padding: 0;
+    list-style: none;
+}
+
+.adoptme {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: baseline;
+}
+
+.adopt__me {
+    width: 100px;  /* Or whatever */
+    height: 100px; /* Or whatever */
+    margin: auto;    
+    font-weight: 600;
+}
+
+/* .contact_us { */
+    /* align-items: right; */
+/* } */
+
+.first a {
+    font-weight: 600;
+    padding-left: 0%;
+}
+
+li:hover {
+    color: #FF4850;
+}
+
+button {
+    /* float: right; */
+    background-color: #FF4850;
+    border: none;
+    color: white;
+    padding: 10px 10px;
+    text-align: center;
+    text-decoration: none;
+    /* display: flex; */
+    font-weight: 300;
+    border-radius: 4px;
+}
+
+button:hover {
+    background-color: #CCC;
+    color: #FF4850;
+}
+
+em { 
+    color: #FF4850;
+}
+
 * {
-    box-sizing: border-box; 
+    box-sizing: border-box;
+}
+
+/* Style the top navigation bar */
+/* .topnav { */
+    /* overflow: hidden; */
+/* } */
+
+/* Style the topnav links */
+/* .topnav a { */
+    /* float: right; */
+    /* display: block; */
+    /* text-align: center; */
+    /* padding: 14px 14px; */
+    /* text-decoration: none; */
+/* } */
+
+/* On screens that are 600px wide or less, make the menu links stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .adoptme {
+    float: none;
+    width: 100%;
   }
-  body {
-    display: flex;
-    min-height: 100vh;
-    flex-direction: column;
-    margin: 0;
-  }
-  #main {
-    display: flex;
-    flex: 1;
-  }
-  #main > article {
-    flex: 1;
-  }
-  #main > nav, 
-  #main > aside {
-    flex: 0 0 20vw;
-    background: beige;
-  }
-  #main > nav {
-    order: -1;
-  }
-  header, footer {
-    background: yellowgreen;
-    height: 20vh;
-  }
-  header, footer, article, nav, aside {
-    padding: 1em;
-  }
-  @media screen and (max-width: 575px) {
-    #main {
-      display: block;
+}
+
+@media screen and (max-width: 768px) {
+    .adoptme {   
+        flex-direction: column;
     }
-  }
+}
+
+/* .leftnav { */
+    /* float: left; */
+    /* display: block; */
+    /* text-align: center; */
+    /* padding: 14px 14px; */
+    /* list-style-type: none; */
+    /* text-decoration: none; */
+/* } */
+
+@media screen and (min-width: 768px) {
+    html {
+        background-color: #F0ECEE;
+        background: url("https://img.freepik.com/free-photo/close-up-of-a-bulldog-with-leather-collar-around-its-neck-on-white-background_23-2147841052.jpg?size=650&ext=jpg");
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-position: center;
+        width: 100%;
+        height: auto;
+    }
+}
